created auth page

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "bulma/sass/_index.scss",
+              "src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -83,7 +86,10 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "bulma/sass/_index.scss",
+              "src/styles.scss"
+            ],
             "scripts": []
           }
         }
