--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-icons/core": "^28.0.0",
     "@ng-icons/ionicons": "^28.0.0",
     "bulma": "^1.0.1",
+    "pocketbase": "^0.21.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
